--- a/style.css
+++ b/style.css
@@ -8,10 +8,16 @@
   background-color: #333;
 }
 
+.menu button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
 .menu button a {
   display: block;
-  color: white;
-  font-size: 20px;
+  color: rgb(255, 255, 255);
+  font-size: 25px;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -199,6 +205,7 @@ section.active {
 
 .comments-display {
   flex: 40%;
+  margin-left: 50px;
 }
 
 .comment-submit-form {
