--- a/resources/index.css
+++ b/resources/index.css
@@ -1,3 +1,14 @@
+/* remove margin on body */
+body {
+  margin: 0;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.error {
+  font-weight: bolder;
+  color: red;
+}
+
 /* Styling for the menu bar */
 .menu {
   display: flex;
@@ -14,8 +25,8 @@
   padding: 0;
   margin: 0;
 }
-.menu button a {
-  display: block;
+.menu a {
+  display: inline-block;
   color: rgb(255, 255, 255);
   font-size: 25px;
   text-align: center;
@@ -27,14 +38,23 @@
   background-color: #111;
 }
 
-/* Section page display */
-section {
-  display: none;
-  padding: 50px;
+#sign-in-section {
+  display: flex;
+  color: white;
+  align-items: center;
+  gap: 8px;
 }
 
-section.active {
-  display: block;
+#sign-in-section button {
+  color: white;
+  padding: 4px;
+  border-radius: 4px;
+  border: 1px solid white;
+}
+
+/* Section page display */
+section {
+  padding: 50px;
 }
 
 /* Styling for maker-page structure */
@@ -69,14 +89,6 @@ section.active {
   transition: all 0.3s ease-in-out;
 }
 
-.emoji-maker-component:hover {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.emoji-maker-component:active {
-  transform: scale(0.95);
-}
-
 .emoji-maker-component img {
   display: block;
   width: 50px;
@@ -84,7 +96,7 @@ section.active {
   margin: 5px;
   border: 1px solid #ccc;
   border-radius: 50%;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 .emoji-maker-component img:hover {
@@ -95,10 +107,24 @@ section.active {
 
 .emoji-maker-component .image {
   display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .emoji-maker-component .image img {
   margin-right: 10px;
+}
+
+.component-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px;
+  max-width: 80px;
+  text-align: center;
+}
+.component-item p {
+  font-size: 0.75rem;
 }
 
 /*Styling the form*/
@@ -185,31 +211,4 @@ section.active {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
-}
-
-/*comment*/
-
-.comments-section {
-  display: none;
-}
-
-.comments-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.post-emoji-info {
-  flex: 30%;
-}
-
-.comments-display {
-  flex: 40%;
-  margin-left: 50px;
-}
-
-.comment-submit-form {
-  flex: 30%;
-  display: flex;
-  flex-direction: column;
 }
