--- a/resources/index.css
+++ b/resources/index.css
@@ -51,3 +51,156 @@ body {
   border-radius: 4px;
   border: 1px solid white;
 }
+
+/**/
+.component-container {
+  border: 2px solid #111;
+  border-radius: 10px;
+  margin: 20px 10px 20px 10px;
+  padding: 0 10px 10px 10px;
+  position: relative;
+}
+/**/
+.btn-remove {
+  position: absolute;
+  right: 15px;
+  padding: 10px 20px;
+  background-color: #e74c3c;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn-remove:hover {
+  background-color: #c0392b;
+}
+
+/* Maker page - index.html */
+.maker-grid {
+  margin: 20px;
+  gap: 20px;
+  display: grid;
+  grid-template-columns: 400px auto;
+}
+
+.browser-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+  margin: 20px;
+}
+
+.browser-item {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  border: 1px solid black;
+  padding: 8px;
+  border-radius: 5px;
+  transition: background-color 200ms ease-in-out;
+}
+
+.browser-item:hover {
+  background-color: aqua;
+}
+
+.canvas-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+.canvas {
+  margin: 5px;
+  height: 300px;
+  width: 300px;
+  margin: 25px;
+  border: 1px solid black;
+  border-radius: 5px;
+  position: relative;
+}
+.canvas img {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Applied in the javascript */
+.emojie-part-container {
+  display: flex;
+  gap: 20px;
+}
+.emojie-part {
+  display: flex;
+  cursor: pointer;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  transition: background-color 80ms ease-in-out;
+}
+.emojie-part:hover {
+  background-color: aliceblue;
+}
+
+.filters-header {
+  text-align: center;
+}
+
+.filters {
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+}
+
+/*form*/
+.form-create-emojie {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.label-form-create-emojie {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  width: 100%;
+}
+
+input[name="description"] {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  width: 95%;
+}
+
+.btn-form-create-emojie {
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #4caf50;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-form-create-emojie:hover {
+  background-color: #2e8b57;
+}
