--- a/resources/index.css
+++ b/resources/index.css
@@ -38,20 +38,6 @@ body {
   background-color: #111;
 }
 
-#sign-in-section {
-  display: flex;
-  color: white;
-  align-items: center;
-  gap: 8px;
-}
-
-#sign-in-section button {
-  color: white;
-  padding: 4px;
-  border-radius: 4px;
-  border: 1px solid white;
-}
-
 /**/
 .component-container {
   border: 2px solid #111;
@@ -152,18 +138,6 @@ body {
   background-color: aliceblue;
 }
 
-.filters-header {
-  text-align: center;
-}
-
-.filters {
-  margin-bottom: 50px;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  justify-content: center;
-}
-
 /*form*/
 .form-create-emojie {
   display: flex;
@@ -203,4 +177,100 @@ input[name="description"] {
 
 .btn-form-create-emojie:hover {
   background-color: #2e8b57;
+}
+
+/*Emoji Browser*/
+.h2-browser-section {
+  margin-top: 50px;
+  padding-top: 20px;
+  border-top: #333 2px solid;
+  text-align: center;
+}
+
+/*filter*/
+
+.filter-section {
+  display: flex;
+  margin-left: 20px;
+}
+
+.filters-header {
+  font-size: 20px;
+  font-weight: bold;
+  margin-right: 20px;
+  margin-top: 12px;
+}
+
+.filters {
+  margin-top: 15px;
+  border-radius: 5px;
+}
+
+/**/
+.click-to-comment-text {
+  margin-left: 20px;
+  font-size: 20px;
+}
+
+.click-card-to-comment {
+  font-weight: bold;
+  color: #333;
+  padding: 10px;
+  border-radius: 5px;
+  display: inline-block;
+  margin-bottom: 0;
+}
+
+/*sign in/ sign up*/
+.sign-in-and-sign-up-section {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+}
+
+.h1-sign {
+  text-align: center;
+  font-size: 36px;
+  margin-top: 50px;
+}
+
+.form-sign {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.label-sign {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.input-sign {
+  width: 300px;
+  height: 40px;
+  font-size: 16px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.btn-sign {
+  width: 200px;
+  height: 50px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+  background-color: green;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  margin-top: 20px;
+}
+
+.btn-sign:hover {
+  background-color: #3cb371;
 }
